--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>gui</title>
+    <style>
+      
+    </style>
     <% if (htmlWebpackPlugin.options.nodeModules) { %>
       <!-- Add `node_modules/` to global paths so `require` works properly in development -->
       <script>
